After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706917 - flickr: resolve() returns wrong values
flickr: resolve() returns wrong values
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-27 19:02 UTC by Juan A. Suarez Romero
Modified: 2013-08-28 08:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flickr: Do not convert "id" to number (2.21 KB, patch)
2013-08-28 08:12 UTC, Juan A. Suarez Romero
committed Details | Review

Description Juan A. Suarez Romero 2013-08-27 19:02:45 UTC
When invoking grl_source_resolve() for a image, the results corresponds to a different image.
Comment 1 Juan A. Suarez Romero 2013-08-28 08:12:19 UTC
Created attachment 253348 [details] [review]
flickr: Do not convert "id" to number

We don't need to convert it to a number; we can deal with it as a string.

This also fixes problems with invalid conversions or numbers outside range.
Comment 2 Juan A. Suarez Romero 2013-08-28 08:13:36 UTC
Attachment 253348 [details] pushed as 9ef8cd1 - flickr: Do not convert "id" to number

commit 9ef8cd1210130554167974561fa4dd652d5ffe4d
Author: Juan A. Suarez Romero <jasuarez@igalia.com>
Date:   Wed Aug 28 08:09:37 2013 +0000

    flickr: Do not convert "id" to number
    
    We don't need to convert it to a number; we can deal with it as a string.
    
    This also fixes problems with invalid conversions or numbers outside range.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=706917

 src/flickr/gflickr.c    | 4 ++--
 src/flickr/gflickr.h    | 2 +-
 src/flickr/grl-flickr.c | 2 +-
 3 files changed, 4 insertions(+), 4 deletions(-)