flickr: Do not convert "id" to number

We don't need to convert it to a number; we can deal with it as a string.

This also fixes problems with invalid conversions or numbers outside range.

https://bugzilla.gnome.org/show_bug.cgi?id=706917